iptables.v4
# Generated by xtables-save v1.8.2
*filter
:INPUT DROP [16:700]
:FORWARD DROP [0:0]
:OUTPUT DROP [356:23987]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 8.8.8.8/32 -p tcp -m tcp --sport 853 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 8.8.4.4/32 -p tcp -m tcp --sport 853 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A FORWARD -i enp8s0 -o bond0 -j ACCEPT
-A FORWARD -i bond0 -o enp8s0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d 8.8.8.8/32 -p tcp -m tcp --dport 853 -j ACCEPT
-A OUTPUT -d 8.8.4.4/32 -p tcp -m tcp --dport 853 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed
